--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -24,6 +24,16 @@ jobs:
       - uses: actions/checkout@main
       - name: Run Bicep linter
         run: az bicep build --file ./main.bicep
+    #Deploy Key Vault
+      - name: Deploy Key Vault
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
+          template: ./key-vault.bicep
+          parameters: ./parameters/key-vault.parameters.json
+          deploymentName: ${{ env.USER_ALIAS }}
+          failOnStdErr: false
 
   deploy-dev:
     if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/feature/')
