--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -66,7 +66,7 @@ jobs:
           failOnStdErr: false
 
   deploy-dev:
-    if: github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/feature/')
+    if: contains(github.ref, 'refs/heads/feature/')
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -90,7 +90,7 @@ jobs:
 
 
   deploy-uat:
-    if: github.event_name == 'pull_request' && github.base_ref == 'main'
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     needs: [build, deploy-dev]
     environment:
@@ -113,9 +113,9 @@ jobs:
           failOnStdErr: false
 
   deploy-prod:
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    needs: [build, deploy-dev, deploy-uat]
+    needs: [build, deploy-uat]
     environment:
       name: "Production"
     env:
