--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -24,25 +24,6 @@ jobs:
       - uses: actions/checkout@main
       - name: Run Bicep linter
         run: az bicep build --file ./main.bicep
-    
-  deploy-acr:
-    runs-on: ubuntu-latest
-    needs: [build] # If the ACR deployment depends on the build job
-    steps:
-      - uses: actions/checkout@main
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Deploy Azure Container Registry
-        uses: azure/arm-deploy@v1
-        with:
-          scope: resourceGroup
-          subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
-          resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
-          template: ./acr.bicep
-          parameters: ./parameters/acr.parameters.json
-          deploymentName: acr-deployment-${{ github.run_number }}
         
   check-deploy-keyvault:
     runs-on: ubuntu-latest
@@ -83,6 +64,26 @@ jobs:
           parameters: ./parameters/key-vault.parameters.json
           deploymentName: keyvault-${{ github.run_id }}
           failOnStdErr: false
+
+  deploy-acr:
+    runs-on: ubuntu-latest
+    needs: [build, check-deploy-keyvault, deploy-key-vault]
+    if: (needs.check-deploy-keyvault.outputs.exists == 'true') || (needs.deploy-key-vault.result == 'success')
+    steps:
+      - uses: actions/checkout@main
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Deploy Azure Container Registry
+        uses: azure/arm-deploy@v1
+        with:
+          scope: resourceGroup
+          subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
+          template: ./acr.bicep
+          parameters: ./parameters/acr.parameters.json
+          deploymentName: acr-deployment-${{ github.run_number }}
 
   deploy-dev:
     if: contains(github.ref, 'refs/heads/feature/')
