--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -86,7 +86,7 @@ jobs:
           failOnStdErr: false
 
   deploy-dev:
-    if: contains(github.ref, 'refs/heads/feature/')
+    if: startsWith(github.ref, 'refs/heads/feature/')
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -110,7 +110,7 @@ jobs:
 
 
   deploy-uat:
-    if: github.event_name == 'pull_request'
+    if: if: github.event_name == 'pull_request' && github.base_ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [build, deploy-dev]
     environment:
