--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -110,7 +110,7 @@ jobs:
 
 
   deploy-uat:
-    if: github.event_name == 'pull_request'
+    if: ${{ github.event.pull_request }}
     runs-on: ubuntu-latest
     needs: [build, deploy-dev]
     environment:
