--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -86,7 +86,7 @@ jobs:
           failOnStdErr: false
 
   deploy-dev:
-    if: startsWith(github.ref, 'refs/heads/feature/')
+    if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -110,9 +110,9 @@ jobs:
 
 
   deploy-uat:
-    if: github.event_name == 'pull_request' && github.event.action == 'opened' && contains(github.head_ref, 'feature/')
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build, deploy-dev]
     environment:
       name: "User Acceptance Testing"
     env:
@@ -135,7 +135,7 @@ jobs:
   deploy-prod:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build, deploy-uat]
     environment:
       name: "Production"
     env:
