--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -16,7 +16,8 @@ env:
   RESOURCE_GROUP_UAT: aguadamillas_students_2
   SUBSCRIPTION_ID_DEV: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   SUBSCRIPTION_ID_UAT: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
-  USER_ALIAS: monke
+  USER_ALIAS: barbie
+  LOCATION: Norway East
 
 jobs:
   build:
@@ -40,7 +41,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./key-vault.bicep
-          parameters: ./parameters/key-vault.parameters.json
+          parameters: ./parameters/key-vault.parameters.json location=${{ env.LOCATION }}
           deploymentName: keyvaultacr-${{ github.run_id }}
           failOnStdErr: false
 
@@ -63,7 +64,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
-          parameters: ./parameters/dev.parameters.json 
+          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }}
           deploymentName: ${{ env.USER_ALIAS }}
           failOnStdErr: false
 
@@ -87,7 +88,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/uat.parameters.json 
+          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }}
           deploymentName: ${{ env.USER_ALIAS }}
           failOnStdErr: false
 
@@ -110,5 +111,5 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/prod.parameters.json
+          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }}
           failOnStdErr: false
