--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -46,7 +46,7 @@ jobs:
           failOnStdErr: false
 
   deploy-dev:
-    if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     needs: build
     environment:
