--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -29,6 +29,7 @@ jobs:
 
   deploy-key-vault-and-acr:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@main
       - name: Login to Azure
@@ -48,7 +49,7 @@ jobs:
   deploy-dev:
     if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, deploy-key-vault-and-acr]
     environment:
       name: "Development"
     env:
