--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -47,7 +47,7 @@ jobs:
           failOnStdErr: false
 
   deploy-dev:
-    if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [build, deploy-key-vault-and-acr]
     environment:
@@ -71,9 +71,9 @@ jobs:
 
 
   deploy-uat:
-    if: github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    if: github.ref == (github.event_name == 'pull_request' && github.event.action != 'closed') || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [build, deploy-dev]
+    needs: [build, deploy-key-vault-and-acr]
     environment:
       name: "User Acceptance Testing"
     env:
@@ -96,7 +96,7 @@ jobs:
   deploy-prod:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [build, deploy-uat]
+    needs: [build, deploy-key-vault-and-acr]
     environment:
       name: "Production"
     env:
