--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -73,7 +73,7 @@ jobs:
   deploy-uat:
     if: github.ref == (github.event_name == 'pull_request' && github.event.action != 'closed') || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [build, deploy-key-vault-and-acr]
+    needs: [deploy-dev]
     environment:
       name: "User Acceptance Testing"
     env:
@@ -96,7 +96,7 @@ jobs:
   deploy-prod:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [build, deploy-key-vault-and-acr]
+    needs: [deploy-uat]
     environment:
       name: "Production"
     env:
