--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -47,7 +47,7 @@ jobs:
           failOnStdErr: false
 
   deploy-dev:
-    if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main' || github.ref == (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     needs: [build, deploy-key-vault-and-acr]
     environment:
