--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - 'feature/**'
+      - "feature/**"
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
@@ -45,6 +45,15 @@ jobs:
           parameters: ./parameters/key-vault.parameters.json location=${{ env.LOCATION }}
           deploymentName: keyvaultacr-${{ github.run_id }}.global
           failOnStdErr: false
+      - name: Deploy KeyVault and ACR Diagnostics
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
+          template: ./kv-diagnostics.bicep
+          parameters: ./parameters/key-vault.parameters.json location=${{ env.LOCATION }}
+          deploymentName: diagnostics-${{ github.run_id }}.global
+          failOnStdErr: false
 
   deploy-dev:
     if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main' || github.ref == (github.event_name == 'pull_request' && github.event.action != 'closed')
@@ -59,7 +68,7 @@ jobs:
       - uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: deploy
+      - name: Deploy Main Infrastructure
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
@@ -68,7 +77,15 @@ jobs:
           parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.dev
           failOnStdErr: false
-
+      - name: Deploy Dev Diagnostics
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
+          template: ./dev-diagnostics.bicep
+          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }}
+          deploymentName: diagnostics-${{ github.run_id }}.dev
+          failOnStdErr: false
 
   deploy-uat:
     if: github.ref == (github.event_name == 'pull_request' && github.event.action != 'closed') || github.ref == 'refs/heads/main'
@@ -83,7 +100,7 @@ jobs:
       - uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: deploy
+      - name: Deploy Main Infrastructure
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
@@ -91,6 +108,15 @@ jobs:
           template: ./main.bicep
           parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.uat
+          failOnStdErr: false
+      - name: Deploy UAT Diagnostics
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
+          template: ./uat-diagnostics.bicep
+          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }}
+          deploymentName: diagnostics-${{ github.run_id }}.uat
           failOnStdErr: false
 
   deploy-prod:
@@ -106,7 +132,7 @@ jobs:
       - uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: deploy
+      - name: Deploy Main Infrastructure
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
@@ -114,4 +140,13 @@ jobs:
           template: ./main.bicep
           parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.prod
+          failOnStdErr: false
+      - name: Deploy PROD Diagnostics
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
+          resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
+          template: ./prod-diagnostics.bicep
+          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }}
+          deploymentName: diagnostics-${{ github.run_id }}.prod
           failOnStdErr: false
