--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -43,7 +43,6 @@ jobs:
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./key-vault.bicep
           parameters: ./parameters/key-vault.parameters.json location=${{ env.LOCATION }}
-          deploymentName: keyvaultacr-${{ github.run_id }}.global
           failOnStdErr: false
       - name: Deploy KeyVault and ACR Diagnostics
         uses: azure/arm-deploy@v1
@@ -74,7 +73,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
-          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }}
+          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUB_TOKEN }} githubRepo=${{ vars.FRONT_END_REPO }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.dev
           failOnStdErr: false
       - name: Deploy Dev Diagnostics
@@ -106,7 +105,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }}
+          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUB_TOKEN }} githubRepo=${{ vars.FRONT_END_REPO }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.uat
           failOnStdErr: false
       - name: Deploy UAT Diagnostics
@@ -138,7 +137,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }}
+          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUB_TOKEN }} githubRepo=${{ vars.FRONT_END_REPO }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.prod
           failOnStdErr: false
       - name: Deploy PROD Diagnostics
