--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -73,7 +73,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
-          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUB_TOKEN }} githubRepo=${{ vars.FRONT_END_REPO }}
+          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} githubRepo=${{ vars.FRONT_END_REPO }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.dev
           failOnStdErr: false
       - name: Deploy Dev Diagnostics
@@ -105,7 +105,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUB_TOKEN }} githubRepo=${{ vars.FRONT_END_REPO }}
+          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} githubRepo=${{ vars.FRONT_END_REPO }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.uat
           failOnStdErr: false
       - name: Deploy UAT Diagnostics
@@ -137,7 +137,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUB_TOKEN }} githubRepo=${{ vars.FRONT_END_REPO }}
+          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} githubRepo=${{ vars.FRONT_END_REPO }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.prod
           failOnStdErr: false
       - name: Deploy PROD Diagnostics
