--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -75,7 +75,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
           template: ./main.bicep
-          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
+          parameters: ./parameters/dev.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.dev
           failOnStdErr: false
       - name: Deploy Dev Diagnostics
@@ -109,7 +109,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
+          parameters: ./parameters/uat.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.uat
           failOnStdErr: false
       - name: Deploy UAT Diagnostics
@@ -143,7 +143,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
           resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
           template: ./main.bicep
-          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
+          parameters: ./parameters/prod.parameters.json location=${{ env.LOCATION }} githubToken=${{ secrets.GITHUBTOKEN }} githubRepo=${{ vars.FRONT_END_REPO }} DBPASS=${{ secrets.DBPASS }} DBUSER=${{ secrets.DBUSER }} DBHOST=${{ env.DBHOST }} DBNAME=${{ env.DBNAME }} ENV=${{ env.ENV }}
           deploymentName: ${{ env.USER_ALIAS }}.${{ github.run_id }}.prod
           failOnStdErr: false
       - name: Deploy PROD Diagnostics
