--- a/.github/workflows/devops-banking-infrastrure.yml
+++ b/.github/workflows/devops-banking-infrastrure.yml
@@ -57,7 +57,7 @@ jobs:
   deploy-dev:
     if: startsWith(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/main' || github.ref == (github.event_name == 'pull_request' && github.event_name.event != 'closed')
     runs-on: ubuntu-latest
-    needs: [build, deploy-key-vault-and-acr]
+    needs: [build]
     environment:
       name: "Development"
     env:
